Atualização dos ícones do cabeçalho

--- a/index.html
+++ b/index.html
@@ -37,15 +37,17 @@
                     <img src="Img/slogan.png" class="img-fluid" alt="Imagem responsiva">
                 </div>
                 <div class="col-1 align-self-center">
-                    <img src="Img/duvida.png" alt="iconeCab" class="img-fluid">
+                    <img src="Img/duvida1.png" alt="iconeCab" class="img-fluid">
                 </div>
                 <div class="col-1 align-self-center">
-                    <img src="Img/favorito.png" alt="iconeCab1" class="img-fluid">
+                    <img src="Img/favorito1.png" alt="iconeCab1" class="img-fluid">
                 </div>
                 <div class="col-1 align-self-center">
-                    <img src="Img/compras.png" alt="iconeCab2" class="img-fluid">
+                    <img src="Img/compra1.png" alt="iconeCab2" class="img-fluid">
                 </div>
                 <!--Separei os ícones e alterei a class por causa da responsividade-->
+                <!--Atualizei os ícones do cabeçalho nomeando cada um deles-->
+
             </div>
         </div>
 
