--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="shortcut icon" href="Img/favicon.ico" type="icone-ico">
     <title>Game Mania</title>
     <meta name="description" content="Game Mania, Loja de Games e Tecnologia.">
     <meta name="keywords" content="Games, PC, Celular, Geek, Tecnologia">
@@ -244,7 +245,34 @@
     <script src="css/script.js"></script>
 
     <footer>
-        <img src="Img/rodape.jpg" width="100%">
+        <div class="container-fluid">
+            <div class="row justify-content-md-center">
+                <div class="col-1">
+                    <img src="Img/icon_insta.png" alt="logo" class="img-fluid">
+                </div><div class="col-1">
+                    <img src="Img/icon_face.png" alt="logo" class="img-fluid">
+                </div><div class="col-1">
+                    <img src="Img/icon_Tiktok.png" alt="logo" class="img-fluid">
+                </div><div class="col-1">
+                    <img src="Img/icon_TwiterX.png" alt="logo" class="img-fluid">
+                </div><div class="col-1">
+                    <img src="Img/icon_Youtube.png" alt="logo" class="img-fluid">
+                </div>
+                <div class="col-4">
+                    <img src="Img/Formas de Pag.png" class="img-fluid" alt="Imagem responsiva">
+                </div>
+                <div class="col-1 align-self-center">
+                    <img src="Img/icon_WhatsApp.png" alt="iconeCab" class="img-fluid">
+                </div>
+                <div class="col-1 align-self-center">
+                    <img src="Img/icon_Messenger.png" alt="iconeCab1" class="img-fluid">
+                </div>
+                <div class="col-1 align-self-center">
+                    <img src="Img/icon_Mail.png" alt="iconeCab2" class="img-fluid">
+                </div>
+                <!--Refiz o rodapé com os icones clicáveis-->
+            </div>
+        </div>
     </footer>
     </div>
 </body>
