--- a/login.html
+++ b/login.html
@@ -143,7 +143,63 @@
 
         </div>
 
-        <script src="css/script.js"></script>
+            <!--Atualização dos banners com o bootstrap e reposicionamento dos mesmos-->
+    <div class="container-fluid">
+        <div class="row justify-content-md-center">
+            <div class="col-8 align-self-center">
+                <img src="Img/banner2.jpg" alt="banner2" class="img-fluid">
+            </div>
+            <div class="col-4 align-self-center">
+                <img src="Img/banner3.jpg" alt="banner3" class="img-fluid">
+            </div>
+        </div>
+    </div>
+
+    <br>
+
+    <!--Atualizei as imagens das ofertas com o bootstrap -->
+    <div class="container-fluid">
+        <div class="row justify-content-md-center">
+            <div class="col-2"></div>
+            <div class="col-8">
+                <img src="Img/ofertatitulo.png" alt="ofertatitulo" class="img-fluid">
+            </div>
+            <div class="col-2"></div>
+        </div>
+    </div>
+
+    <div class="container-fluid">
+        <div class="row justify-content-md-center">
+            <div class="col-3">
+                <img src="Img/oferta1.jpg" alt="oferta1" class="img-fluid">
+            </div>
+            <div class="col-3">
+                <img src="Img/oferta2.jpg" alt="oferta2" class="img-fluid">
+            </div>
+            <div class="col-3">
+                <img src="Img/oferta3.jpg" alt="oferta3" class="img-fluid">
+            </div>
+            <div class="col-3">
+                <img src="Img/oferta4.jpg" alt="oferta4" class="img-fluid">
+            </div>
+        </div>
+    </div>
+
+    <br>
+    <!--Atualizei o banner de montagem de pc e coloquei as ofertas entre ele e os outros banners-->
+    <div class="container-fluid">
+        <div class="row justify-content-md-center">
+            <div class="col-1"></div>
+            <div class="col-10">
+                <img src="Img/montarpc.png" alt="montarpc" class="img-fluid">
+            </div>
+            <div class="col-1"></div>
+        </div>
+    </div>
+
+    <br>
+
+    <script src="css/script.js"></script>
         
         <footer>
             <div class="container-fluid">
